Migrate use of boxed primitive constructors